--- a/SimpleWeather.Android/packages.config
+++ b/SimpleWeather.Android/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="AutoFitTextView" version="0.2.1.0" targetFramework="monoandroid71" />
+  <package id="Glide.Xamarin" version="3.8.0" targetFramework="monoandroid71" />
   <package id="Microsoft.CSharp" version="4.4.0" targetFramework="monoandroid71" />
   <package id="Microsoft.NETCore.Platforms" version="2.0.0" targetFramework="monoandroid71" />
   <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="monoandroid71" />
