SimpleWeather.Android: switch to GlideComponent

--- a/.gitignore
+++ b/.gitignore
@@ -251,3 +251,4 @@ API_KEY.txt
 /SimpleWeather.UWP/_scale-125.appx
 /SimpleWeather.UWP/_scale-100.appx
 /SimpleWeather.UWP/_pkginfo.txt
+/Components
