--- a/SimpleWeather.Android/SimpleWeather.Android.csproj
+++ b/SimpleWeather.Android/SimpleWeather.Android.csproj
@@ -474,211 +474,211 @@
     <AndroidResource Include="Resources\layout\app_widget_forecast_panel.xml" />
   </ItemGroup>
   <ItemGroup>
-    <AndroidAsset Include="Assets\weathericons\png\na.png" />
+    <AndroidResource Include="Resources\drawable-nodpi\na.png" />
   </ItemGroup>
   <ItemGroup>
-    <AndroidAsset Include="Assets\weathericons\png\wu-chanceflurries.png" />
+    <AndroidResource Include="Resources\drawable-nodpi\wu_chanceflurries.png" />
   </ItemGroup>
   <ItemGroup>
-    <AndroidAsset Include="Assets\weathericons\png\wu-chancerain.png" />
+    <AndroidResource Include="Resources\drawable-nodpi\wu_chancerain.png" />
   </ItemGroup>
   <ItemGroup>
-    <AndroidAsset Include="Assets\weathericons\png\wu-chancesleat.png" />
+    <AndroidResource Include="Resources\drawable-nodpi\wu_chancesleat.png" />
   </ItemGroup>
   <ItemGroup>
-    <AndroidAsset Include="Assets\weathericons\png\wu-chancesnow.png" />
+    <AndroidResource Include="Resources\drawable-nodpi\wu_chancesnow.png" />
   </ItemGroup>
   <ItemGroup>
-    <AndroidAsset Include="Assets\weathericons\png\wu-chancetstorms.png" />
+    <AndroidResource Include="Resources\drawable-nodpi\wu_chancetstorms.png" />
   </ItemGroup>
   <ItemGroup>
-    <AndroidAsset Include="Assets\weathericons\png\wu-clear.png" />
+    <AndroidResource Include="Resources\drawable-nodpi\wu_clear.png" />
   </ItemGroup>
   <ItemGroup>
-    <AndroidAsset Include="Assets\weathericons\png\wu-cloudy.png" />
+    <AndroidResource Include="Resources\drawable-nodpi\wu_cloudy.png" />
   </ItemGroup>
   <ItemGroup>
-    <AndroidAsset Include="Assets\weathericons\png\wu-flurries.png" />
+    <AndroidResource Include="Resources\drawable-nodpi\wu_flurries.png" />
   </ItemGroup>
   <ItemGroup>
-    <AndroidAsset Include="Assets\weathericons\png\wu-hazy.png" />
+    <AndroidResource Include="Resources\drawable-nodpi\wu_hazy.png" />
   </ItemGroup>
   <ItemGroup>
-    <AndroidAsset Include="Assets\weathericons\png\wu-mostlycloudy.png" />
+    <AndroidResource Include="Resources\drawable-nodpi\wu_mostlycloudy.png" />
   </ItemGroup>
   <ItemGroup>
-    <AndroidAsset Include="Assets\weathericons\png\wu-mostlysunny.png" />
+    <AndroidResource Include="Resources\drawable-nodpi\wu_mostlysunny.png" />
   </ItemGroup>
   <ItemGroup>
-    <AndroidAsset Include="Assets\weathericons\png\wu-partlycloudy.png" />
+    <AndroidResource Include="Resources\drawable-nodpi\wu_partlycloudy.png" />
   </ItemGroup>
   <ItemGroup>
-    <AndroidAsset Include="Assets\weathericons\png\wu-partlysunny.png" />
+    <AndroidResource Include="Resources\drawable-nodpi\wu_partlysunny.png" />
   </ItemGroup>
   <ItemGroup>
-    <AndroidAsset Include="Assets\weathericons\png\wu-rain.png" />
+    <AndroidResource Include="Resources\drawable-nodpi\wu_rain.png" />
   </ItemGroup>
   <ItemGroup>
-    <AndroidAsset Include="Assets\weathericons\png\wu-sleat.png" />
+    <AndroidResource Include="Resources\drawable-nodpi\wu_sleat.png" />
   </ItemGroup>
   <ItemGroup>
-    <AndroidAsset Include="Assets\weathericons\png\wu-snow.png" />
+    <AndroidResource Include="Resources\drawable-nodpi\wu_snow.png" />
   </ItemGroup>
   <ItemGroup>
-    <AndroidAsset Include="Assets\weathericons\png\wu-sunny.png" />
+    <AndroidResource Include="Resources\drawable-nodpi\wu_sunny.png" />
   </ItemGroup>
   <ItemGroup>
-    <AndroidAsset Include="Assets\weathericons\png\wu-tstorms.png" />
+    <AndroidResource Include="Resources\drawable-nodpi\wu_tstorms.png" />
   </ItemGroup>
   <ItemGroup>
-    <AndroidAsset Include="Assets\weathericons\png\wu-unknown.png" />
+    <AndroidResource Include="Resources\drawable-nodpi\wu_unknown.png" />
   </ItemGroup>
   <ItemGroup>
-    <AndroidAsset Include="Assets\weathericons\png\yahoo-0.png" />
+    <AndroidResource Include="Resources\drawable-nodpi\yahoo_0.png" />
   </ItemGroup>
   <ItemGroup>
-    <AndroidAsset Include="Assets\weathericons\png\yahoo-1.png" />
+    <AndroidResource Include="Resources\drawable-nodpi\yahoo_1.png" />
   </ItemGroup>
   <ItemGroup>
-    <AndroidAsset Include="Assets\weathericons\png\yahoo-10.png" />
+    <AndroidResource Include="Resources\drawable-nodpi\yahoo_10.png" />
   </ItemGroup>
   <ItemGroup>
-    <AndroidAsset Include="Assets\weathericons\png\yahoo-11.png" />
+    <AndroidResource Include="Resources\drawable-nodpi\yahoo_11.png" />
   </ItemGroup>
   <ItemGroup>
-    <AndroidAsset Include="Assets\weathericons\png\yahoo-12.png" />
+    <AndroidResource Include="Resources\drawable-nodpi\yahoo_12.png" />
   </ItemGroup>
   <ItemGroup>
-    <AndroidAsset Include="Assets\weathericons\png\yahoo-13.png" />
+    <AndroidResource Include="Resources\drawable-nodpi\yahoo_13.png" />
   </ItemGroup>
   <ItemGroup>
-    <AndroidAsset Include="Assets\weathericons\png\yahoo-14.png" />
+    <AndroidResource Include="Resources\drawable-nodpi\yahoo_14.png" />
   </ItemGroup>
   <ItemGroup>
-    <AndroidAsset Include="Assets\weathericons\png\yahoo-15.png" />
+    <AndroidResource Include="Resources\drawable-nodpi\yahoo_15.png" />
   </ItemGroup>
   <ItemGroup>
-    <AndroidAsset Include="Assets\weathericons\png\yahoo-16.png" />
+    <AndroidResource Include="Resources\drawable-nodpi\yahoo_16.png" />
   </ItemGroup>
   <ItemGroup>
-    <AndroidAsset Include="Assets\weathericons\png\yahoo-17.png" />
+    <AndroidResource Include="Resources\drawable-nodpi\yahoo_17.png" />
   </ItemGroup>
   <ItemGroup>
-    <AndroidAsset Include="Assets\weathericons\png\yahoo-18.png" />
+    <AndroidResource Include="Resources\drawable-nodpi\yahoo_18.png" />
   </ItemGroup>
   <ItemGroup>
-    <AndroidAsset Include="Assets\weathericons\png\yahoo-19.png" />
+    <AndroidResource Include="Resources\drawable-nodpi\yahoo_19.png" />
   </ItemGroup>
   <ItemGroup>
-    <AndroidAsset Include="Assets\weathericons\png\yahoo-2.png" />
+    <AndroidResource Include="Resources\drawable-nodpi\yahoo_2.png" />
   </ItemGroup>
   <ItemGroup>
-    <AndroidAsset Include="Assets\weathericons\png\yahoo-20.png" />
+    <AndroidResource Include="Resources\drawable-nodpi\yahoo_20.png" />
   </ItemGroup>
   <ItemGroup>
-    <AndroidAsset Include="Assets\weathericons\png\yahoo-21.png" />
+    <AndroidResource Include="Resources\drawable-nodpi\yahoo_21.png" />
   </ItemGroup>
   <ItemGroup>
-    <AndroidAsset Include="Assets\weathericons\png\yahoo-22.png" />
+    <AndroidResource Include="Resources\drawable-nodpi\yahoo_22.png" />
   </ItemGroup>
   <ItemGroup>
-    <AndroidAsset Include="Assets\weathericons\png\yahoo-23.png" />
+    <AndroidResource Include="Resources\drawable-nodpi\yahoo_23.png" />
   </ItemGroup>
   <ItemGroup>
-    <AndroidAsset Include="Assets\weathericons\png\yahoo-24.png" />
+    <AndroidResource Include="Resources\drawable-nodpi\yahoo_24.png" />
   </ItemGroup>
   <ItemGroup>
-    <AndroidAsset Include="Assets\weathericons\png\yahoo-25.png" />
+    <AndroidResource Include="Resources\drawable-nodpi\yahoo_25.png" />
   </ItemGroup>
   <ItemGroup>
-    <AndroidAsset Include="Assets\weathericons\png\yahoo-26.png" />
+    <AndroidResource Include="Resources\drawable-nodpi\yahoo_26.png" />
   </ItemGroup>
   <ItemGroup>
-    <AndroidAsset Include="Assets\weathericons\png\yahoo-27.png" />
+    <AndroidResource Include="Resources\drawable-nodpi\yahoo_27.png" />
   </ItemGroup>
   <ItemGroup>
-    <AndroidAsset Include="Assets\weathericons\png\yahoo-28.png" />
+    <AndroidResource Include="Resources\drawable-nodpi\yahoo_28.png" />
   </ItemGroup>
   <ItemGroup>
-    <AndroidAsset Include="Assets\weathericons\png\yahoo-29.png" />
+    <AndroidResource Include="Resources\drawable-nodpi\yahoo_29.png" />
   </ItemGroup>
   <ItemGroup>
-    <AndroidAsset Include="Assets\weathericons\png\yahoo-3.png" />
+    <AndroidResource Include="Resources\drawable-nodpi\yahoo_3.png" />
   </ItemGroup>
   <ItemGroup>
-    <AndroidAsset Include="Assets\weathericons\png\yahoo-30.png" />
+    <AndroidResource Include="Resources\drawable-nodpi\yahoo_30.png" />
   </ItemGroup>
   <ItemGroup>
-    <AndroidAsset Include="Assets\weathericons\png\yahoo-31.png" />
+    <AndroidResource Include="Resources\drawable-nodpi\yahoo_31.png" />
   </ItemGroup>
   <ItemGroup>
-    <AndroidAsset Include="Assets\weathericons\png\yahoo-32.png" />
+    <AndroidResource Include="Resources\drawable-nodpi\yahoo_32.png" />
   </ItemGroup>
   <ItemGroup>
-    <AndroidAsset Include="Assets\weathericons\png\yahoo-3200.png" />
+    <AndroidResource Include="Resources\drawable-nodpi\yahoo_3200.png" />
   </ItemGroup>
   <ItemGroup>
-    <AndroidAsset Include="Assets\weathericons\png\yahoo-33.png" />
+    <AndroidResource Include="Resources\drawable-nodpi\yahoo_33.png" />
   </ItemGroup>
   <ItemGroup>
-    <AndroidAsset Include="Assets\weathericons\png\yahoo-34.png" />
+    <AndroidResource Include="Resources\drawable-nodpi\yahoo_34.png" />
   </ItemGroup>
   <ItemGroup>
-    <AndroidAsset Include="Assets\weathericons\png\yahoo-35.png" />
+    <AndroidResource Include="Resources\drawable-nodpi\yahoo_35.png" />
   </ItemGroup>
   <ItemGroup>
-    <AndroidAsset Include="Assets\weathericons\png\yahoo-36.png" />
+    <AndroidResource Include="Resources\drawable-nodpi\yahoo_36.png" />
   </ItemGroup>
   <ItemGroup>
-    <AndroidAsset Include="Assets\weathericons\png\yahoo-37.png" />
+    <AndroidResource Include="Resources\drawable-nodpi\yahoo_37.png" />
   </ItemGroup>
   <ItemGroup>
-    <AndroidAsset Include="Assets\weathericons\png\yahoo-38.png" />
+    <AndroidResource Include="Resources\drawable-nodpi\yahoo_38.png" />
   </ItemGroup>
   <ItemGroup>
-    <AndroidAsset Include="Assets\weathericons\png\yahoo-39.png" />
+    <AndroidResource Include="Resources\drawable-nodpi\yahoo_39.png" />
   </ItemGroup>
   <ItemGroup>
-    <AndroidAsset Include="Assets\weathericons\png\yahoo-4.png" />
+    <AndroidResource Include="Resources\drawable-nodpi\yahoo_4.png" />
   </ItemGroup>
   <ItemGroup>
-    <AndroidAsset Include="Assets\weathericons\png\yahoo-40.png" />
+    <AndroidResource Include="Resources\drawable-nodpi\yahoo_40.png" />
   </ItemGroup>
   <ItemGroup>
-    <AndroidAsset Include="Assets\weathericons\png\yahoo-41.png" />
+    <AndroidResource Include="Resources\drawable-nodpi\yahoo_41.png" />
   </ItemGroup>
   <ItemGroup>
-    <AndroidAsset Include="Assets\weathericons\png\yahoo-42.png" />
+    <AndroidResource Include="Resources\drawable-nodpi\yahoo_42.png" />
   </ItemGroup>
   <ItemGroup>
-    <AndroidAsset Include="Assets\weathericons\png\yahoo-43.png" />
+    <AndroidResource Include="Resources\drawable-nodpi\yahoo_43.png" />
   </ItemGroup>
   <ItemGroup>
-    <AndroidAsset Include="Assets\weathericons\png\yahoo-44.png" />
+    <AndroidResource Include="Resources\drawable-nodpi\yahoo_44.png" />
   </ItemGroup>
   <ItemGroup>
-    <AndroidAsset Include="Assets\weathericons\png\yahoo-45.png" />
+    <AndroidResource Include="Resources\drawable-nodpi\yahoo_45.png" />
   </ItemGroup>
   <ItemGroup>
-    <AndroidAsset Include="Assets\weathericons\png\yahoo-46.png" />
+    <AndroidResource Include="Resources\drawable-nodpi\yahoo_46.png" />
   </ItemGroup>
   <ItemGroup>
-    <AndroidAsset Include="Assets\weathericons\png\yahoo-47.png" />
+    <AndroidResource Include="Resources\drawable-nodpi\yahoo_47.png" />
   </ItemGroup>
   <ItemGroup>
-    <AndroidAsset Include="Assets\weathericons\png\yahoo-5.png" />
+    <AndroidResource Include="Resources\drawable-nodpi\yahoo_5.png" />
   </ItemGroup>
   <ItemGroup>
-    <AndroidAsset Include="Assets\weathericons\png\yahoo-6.png" />
+    <AndroidResource Include="Resources\drawable-nodpi\yahoo_6.png" />
   </ItemGroup>
   <ItemGroup>
-    <AndroidAsset Include="Assets\weathericons\png\yahoo-7.png" />
+    <AndroidResource Include="Resources\drawable-nodpi\yahoo_7.png" />
   </ItemGroup>
   <ItemGroup>
-    <AndroidAsset Include="Assets\weathericons\png\yahoo-8.png" />
+    <AndroidResource Include="Resources\drawable-nodpi\yahoo_8.png" />
   </ItemGroup>
   <ItemGroup>
-    <AndroidAsset Include="Assets\weathericons\png\yahoo-9.png" />
+    <AndroidResource Include="Resources\drawable-nodpi\yahoo_9.png" />
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\layout\app_widget_4x1.xml" />
