SimpleWeather.Android: use fonts in XML feature

--- a/SimpleWeather.Android/SimpleWeather.Android.csproj
+++ b/SimpleWeather.Android/SimpleWeather.Android.csproj
@@ -191,7 +191,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
-    <AndroidAsset Include="Assets\weathericons\weathericons-regular-webfont.ttf" />
+    <AndroidResource Include="Resources\font\weathericons.ttf" />
     <None Include="packages.config">
       <SubType>Designer</SubType>
     </None>
