SimpleWeather: use SQLite & try to improve performance
* Use SQLite-NET library
* Add migration path from .json to .db
* Implement custom methods to convert custom data to/from json
* Misc bug fixes

--- a/SimpleWeather.Android/packages.config
+++ b/SimpleWeather.Android/packages.config
@@ -3,8 +3,15 @@
   <package id="Microsoft.CSharp" version="4.4.0" targetFramework="monoandroid80" />
   <package id="Microsoft.NETCore.Platforms" version="2.0.0" targetFramework="monoandroid80" />
   <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="monoandroid80" />
-  <package id="NETStandard.Library" version="2.0.0" targetFramework="monoandroid80" />
+  <package id="NETStandard.Library" version="2.0.1" targetFramework="monoandroid80" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="monoandroid80" />
+  <package id="SQLiteNetExtensions" version="2.0.0-alpha2" targetFramework="monoandroid80" />
+  <package id="SQLiteNetExtensions.Async" version="2.0.0-alpha2" targetFramework="monoandroid80" />
+  <package id="sqlite-net-pcl" version="1.5.166-beta" targetFramework="monoandroid80" />
+  <package id="SQLitePCLRaw.bundle_green" version="1.1.8" targetFramework="monoandroid80" />
+  <package id="SQLitePCLRaw.core" version="1.1.8" targetFramework="monoandroid80" />
+  <package id="SQLitePCLRaw.lib.e_sqlite3.android" version="1.1.8" targetFramework="monoandroid80" />
+  <package id="SQLitePCLRaw.provider.e_sqlite3.android" version="1.1.8" targetFramework="monoandroid80" />
   <package id="System.AppContext" version="4.3.0" targetFramework="monoandroid80" />
   <package id="System.Collections" version="4.3.0" targetFramework="monoandroid80" />
   <package id="System.Collections.Concurrent" version="4.3.0" targetFramework="monoandroid80" />
@@ -51,25 +58,28 @@
   <package id="System.Xml.ReaderWriter" version="4.3.0" targetFramework="monoandroid80" />
   <package id="System.Xml.XDocument" version="4.3.0" targetFramework="monoandroid80" />
   <package id="System.Xml.XmlDocument" version="4.3.0" targetFramework="monoandroid80" />
-  <package id="Xamarin.Android.Support.Animated.Vector.Drawable" version="26.0.2" targetFramework="monoandroid80" />
-  <package id="Xamarin.Android.Support.Annotations" version="26.0.2" targetFramework="monoandroid80" />
-  <package id="Xamarin.Android.Support.Compat" version="26.0.2" targetFramework="monoandroid80" />
+  <package id="Xamarin.Android.Arch.Core.Common" version="1.0.0" targetFramework="monoandroid80" />
+  <package id="Xamarin.Android.Arch.Lifecycle.Common" version="1.0.1" targetFramework="monoandroid80" />
+  <package id="Xamarin.Android.Arch.Lifecycle.Runtime" version="1.0.0" targetFramework="monoandroid80" />
+  <package id="Xamarin.Android.Support.Animated.Vector.Drawable" version="26.1.0.1" targetFramework="monoandroid80" />
+  <package id="Xamarin.Android.Support.Annotations" version="26.1.0.1" targetFramework="monoandroid80" />
+  <package id="Xamarin.Android.Support.Compat" version="26.1.0.1" targetFramework="monoandroid80" />
   <package id="Xamarin.Android.Support.Constraint.Layout" version="1.0.2.2" targetFramework="monoandroid80" />
   <package id="Xamarin.Android.Support.Constraint.Layout.Solver" version="1.0.2.2" targetFramework="monoandroid80" />
-  <package id="Xamarin.Android.Support.Core.UI" version="26.0.2" targetFramework="monoandroid80" />
-  <package id="Xamarin.Android.Support.Core.Utils" version="26.0.2" targetFramework="monoandroid80" />
-  <package id="Xamarin.Android.Support.CustomTabs" version="26.0.2" targetFramework="monoandroid80" />
-  <package id="Xamarin.Android.Support.Design" version="26.0.2" targetFramework="monoandroid80" />
-  <package id="Xamarin.Android.Support.Fragment" version="26.0.2" targetFramework="monoandroid80" />
-  <package id="Xamarin.Android.Support.Media.Compat" version="26.0.2" targetFramework="monoandroid80" />
-  <package id="Xamarin.Android.Support.Transition" version="26.0.2" targetFramework="monoandroid80" />
-  <package id="Xamarin.Android.Support.v14.Preference" version="26.0.2" targetFramework="monoandroid80" />
-  <package id="Xamarin.Android.Support.v4" version="26.0.2" targetFramework="monoandroid80" />
-  <package id="Xamarin.Android.Support.v7.AppCompat" version="26.0.2" targetFramework="monoandroid80" />
-  <package id="Xamarin.Android.Support.v7.CardView" version="26.0.2" targetFramework="monoandroid80" />
-  <package id="Xamarin.Android.Support.v7.GridLayout" version="26.0.2" targetFramework="monoandroid80" />
-  <package id="Xamarin.Android.Support.v7.Preference" version="26.0.2" targetFramework="monoandroid80" />
-  <package id="Xamarin.Android.Support.v7.RecyclerView" version="26.0.2" targetFramework="monoandroid80" />
-  <package id="Xamarin.Android.Support.Vector.Drawable" version="26.0.2" targetFramework="monoandroid80" />
+  <package id="Xamarin.Android.Support.Core.UI" version="26.1.0.1" targetFramework="monoandroid80" />
+  <package id="Xamarin.Android.Support.Core.Utils" version="26.1.0.1" targetFramework="monoandroid80" />
+  <package id="Xamarin.Android.Support.CustomTabs" version="26.1.0.1" targetFramework="monoandroid80" />
+  <package id="Xamarin.Android.Support.Design" version="26.1.0.1" targetFramework="monoandroid80" />
+  <package id="Xamarin.Android.Support.Fragment" version="26.1.0.1" targetFramework="monoandroid80" />
+  <package id="Xamarin.Android.Support.Media.Compat" version="26.1.0.1" targetFramework="monoandroid80" />
+  <package id="Xamarin.Android.Support.Transition" version="26.1.0.1" targetFramework="monoandroid80" />
+  <package id="Xamarin.Android.Support.v14.Preference" version="26.1.0.1" targetFramework="monoandroid80" />
+  <package id="Xamarin.Android.Support.v4" version="26.1.0.1" targetFramework="monoandroid80" />
+  <package id="Xamarin.Android.Support.v7.AppCompat" version="26.1.0.1" targetFramework="monoandroid80" />
+  <package id="Xamarin.Android.Support.v7.CardView" version="26.1.0.1" targetFramework="monoandroid80" />
+  <package id="Xamarin.Android.Support.v7.GridLayout" version="26.1.0.1" targetFramework="monoandroid80" />
+  <package id="Xamarin.Android.Support.v7.Preference" version="26.1.0.1" targetFramework="monoandroid80" />
+  <package id="Xamarin.Android.Support.v7.RecyclerView" version="26.1.0.1" targetFramework="monoandroid80" />
+  <package id="Xamarin.Android.Support.Vector.Drawable" version="26.1.0.1" targetFramework="monoandroid80" />
   <package id="Xamarin.Build.Download" version="0.4.7" targetFramework="monoandroid80" />
 </packages>
