--- a/SimpleWeather.Android/Properties/AndroidManifest.xml
+++ b/SimpleWeather.Android/Properties/AndroidManifest.xml
@@ -1,10 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.thewizrd.simpleweather" android:installLocation="auto" android:versionCode="18" android:versionName="1.0.0">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.thewizrd.simpleweather" android:installLocation="auto" android:versionCode="19" android:versionName="1.0.0">
 	<uses-sdk android:minSdkVersion="16" android:targetSdkVersion="26" />
 	<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 	<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 	<uses-permission android:name="android.permission.INTERNET" />
 	<uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+	<uses-permission android:name="android.permission.WAKE_LOCK" />
 	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 	<application android:allowBackup="true" android:label="@string/app_name" android:theme="@style/MasterDetailTheme"></application>
 </manifest>
